debug-manifests.yaml
---
# Source: muffin-common/templates/muffin-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: muffin-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - bighw.com
    port:
      name: http
      number: 80
      protocol: HTTP
---
# Source: muffin-common/templates/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default-auth
spec:
  mtls:
    mode: STRICT

---
# Source: muffin-currency/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: muffin-currency
  labels:
    helm.sh/chart: muffin-currency-0.1.0
    app.kubernetes.io/name: muffin-currency
    app.kubernetes.io/instance: muffin-currency
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: muffin-currency
---
# Source: muffin-currency/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: muffin-currency
  labels:
    helm.sh/chart: muffin-currency-0.1.0
    app.kubernetes.io/name: muffin-currency
    app.kubernetes.io/instance: muffin-currency
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: muffin-currency
  template:
    metadata:
      labels:
        helm.sh/chart: muffin-currency-0.1.0
        app.kubernetes.io/name: muffin-currency
        app.kubernetes.io/instance: muffin-currency
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
        version: v1
    spec:
      containers:
        - name: muffin-currency
          image: "aadan1lov/muffin-currency:1.0.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /rate?from=PLAIN&to=CHOKOLATE
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /rate?from=PLAIN&to=CHOKOLATE
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
---
# Source: muffin-currency/templates/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-wallet-only
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: muffin-currency
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/bighw/sa/muffin-wallet-sa"]
    to:
    - operation:
        methods: ["GET", "POST"]
---
# Source: muffin-currency/templates/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: "muffin-currency-dr"
spec:
  host: "muffin-currency.bighw.svc.cluster.local"
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 1  
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
# Source: muffin-currency/templates/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: muffin-currency-internal-vs
spec:
  hosts:
  - "muffin-currency.bighw.svc.cluster.local"
  http:
  - route:
    - destination:
        host: "muffin-currency"
        subset: v1
        port:
          number: 8083
      weight: 90
    - destination:
        host: "muffin-currency"
        subset: v2
        port:
          number: 8083
      weight: 10
    timeout: 2s
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream,5xx

---
# Source: muffin-currency/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: muffin-currency-v2
  labels:
    helm.sh/chart: muffin-currency-0.1.0
    app.kubernetes.io/name: muffin-currency
    app.kubernetes.io/instance: muffin-currency-v2
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: muffin-currency
  template:
    metadata:
      labels:
        helm.sh/chart: muffin-currency-0.1.0
        app.kubernetes.io/name: muffin-currency
        app.kubernetes.io/instance: muffin-currency-v2
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
        version: v2
    spec:
      containers:
        - name: muffin-currency
          image: "aadan1lov/muffin-currency:1.0.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /rate?from=PLAIN&to=CHOKOLATE
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /rate?from=PLAIN&to=CHOKOLATE
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5

---
# Source: muffin-wallet/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: muffin-wallet
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: muffin-wallet
    app.kubernetes.io/instance: muffin-wallet
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
---
# Source: muffin-wallet/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: muffin-wallet
  labels:
    helm.sh/chart: muffin-wallet-0.1.0
    app.kubernetes.io/name: muffin-wallet
    app.kubernetes.io/instance: muffin-wallet
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: muffin-wallet
      app.kubernetes.io/instance: muffin-wallet
  template:
    metadata:
      labels:
        helm.sh/chart: muffin-wallet-0.1.0
        app.kubernetes.io/name: muffin-wallet
        app.kubernetes.io/instance: muffin-wallet
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: muffin-wallet-sa
      containers:
        - name: muffin-wallet
          image:  "aadan1lov/muffin-wallet:1.1.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          volumeMounts:
            - mountPath: /app/config
              name: application-config-volume
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - configMap:
            name: muffin-wallet-config
          name: application-config-volume
---
# Source: muffin-wallet/templates/db-service-entry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: postgres-external
spec:
  hosts:
  - host.minikube.internal
  ports:
  - number: 54321    
    name: tcp-postgres
    protocol: TCP       
  resolution: DNS
  location: MESH_EXTERNAL
---
# Source: muffin-wallet/templates/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: muffin-wallet-vs
spec:
  hosts:
  - "bighw.com"
  gateways:
  - muffin-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: "muffin-wallet"
        port:
          number: 8081
